--- a/main.css
+++ b/main.css
@@ -3,3 +3,13 @@ h1{
     font-size: 50px;
     color: darkred
 }
+h1{
+    text-align: center;
+    font-size: 50px;
+    color: darkred
+}
+h1{
+    text-align: center;
+    font-size: 50px;
+    color: darkred
+}
